refactor(generic-object): added types library

--- a/libraries/logger/package.json
+++ b/libraries/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vssanti/logger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist",
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "@vssanti/types": "0.0.1"
   }
 }
